- added SkipWhileInclusive - added branching from sequences - updated methods in StringX